fix(game): align title

--- a/styles/pages/game.module.scss
+++ b/styles/pages/game.module.scss
@@ -23,6 +23,7 @@
 
   &__title {
     margin-bottom: 40px;
+    text-align: center;
   }
 
   &__text-wrapper {
